Added hw 5 (from 1 up to 4 tasks)

--- a/task 1/task1-MultilabelClassification.ipynb
+++ b/task 1/task1-MultilabelClassification.ipynb
@@ -512,12 +512,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "DICT_SIZE = 5000\n",
-    "WORDS_TO_INDEX = dict(zip(words_counts.keys(), range(len(words_counts))))\n",
+    "WORDS_TO_INDEX = dict(zip(dict(sorted(words_counts.items(), key=lambda x: x[1], reverse=True)[:DICT_SIZE]).keys(), range(DICT_SIZE)))\n",
     "INDEX_TO_WORDS = list(WORDS_TO_INDEX.keys())\n",
     "ALL_WORDS = WORDS_TO_INDEX.keys()\n",
     "\n",
@@ -528,10 +528,11 @@
     "        \n",
     "        return a vector which is a bag-of-words representation of 'text'\n",
     "    \"\"\"\n",
+    "    \n",
     "    result_vector = np.zeros(dict_size, dtype=int)\n",
     "    \n",
     "    for word in text.split():\n",
-    "        if word in words_to_index and words_to_index[word] < DICT_SIZE:\n",
+    "        if word in words_to_index:\n",
     "            result_vector[words_to_index[word]] +=1\n",
     "    \n",
     "    return result_vector"
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,19 +589,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_train shape  (100000, 5000)\n",
-      "X_val shape  (30000, 5000)\n",
-      "X_test shape  (20000, 5000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train_mybag = sp_sparse.vstack([sp_sparse.csr_matrix(my_bag_of_words(text, WORDS_TO_INDEX, DICT_SIZE)) for text in X_train])\n",
     "X_val_mybag = sp_sparse.vstack([sp_sparse.csr_matrix(my_bag_of_words(text, WORDS_TO_INDEX, DICT_SIZE)) for text in X_val])\n",
@@ -626,21 +617,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = X_train_mybag[10].toarray()[0]\n",
+    "non_zero_elements_count = sum([bool(i) for i in row])\n",
+    "print(non_zero_elements_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4991\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'obtaining object javalangclasst object parameterized type without constructing class q_uestion'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "row = X_train_mybag[10].toarray()[0]\n",
-    "non_zero_elements_count = len(row)-np.count_nonzero(row)\n",
-    "print(non_zero_elements_count)"
+    "X_train[10]"
    ]
   },
   {
